# reflex

./: .gitignore  AGENTS.md  CONFESSION.md  Dockerfile  HEAD_STUDY.md  LICENSE  MODEL_CARD.md  README.md  RETRAIN.md  action_tokens.py  bench.py  benchmark.py  chip8.py  demo.py  demo_live.py  eval_combined.py  eval_ood.py  eval_ood_lora.py  main.py  model.py  prepare_data.py  pyproject.toml  requirements.txt  run_rocm.md  train.py
programs/arithmetic/: abs.json  add.json  mul_by_repeated_add.json  negate.json  sub.json
programs/arrays/: copy_array.json  count_occurrences.json  fill_array.json  find_element.json  max_array.json  min_array.json  reverse_array.json  sum_array.json
programs/bitwise/: and.json  is_power_of_2.json  or.json  popcount.json  shl.json  shr.json  xor.json
programs/comparison/: clamp.json  equal.json  max.json  min.json  not_equal.json  sign.json
programs/control_flow/: early_return_zero.json  if_else_max.json  nested_if_sign.json  switch_like_grade.json
programs/display/: display.json  write_ascii_text.json  write_digits.json
programs/function/: abs_fn.json  call.json  double_fn.json  triple_fn.json
programs/loops/: count_down.json  count_up.json  product_range_small.json  sum_evens.json  sum_odds.json  sum_range.json
programs/math/: factorial.json  fibonacci.json  gcd.json  isqrt.json  power.json  triangular.json
programs/memory/: memcpy.json  memset.json  swap_two_values.json
programs/sorting/: bubble_sort_small.json
programs/stack/: push_pop_sequence.json
programs/strings/: count_char.json  strlen.json
reflex/: chip8.py  data.py  demo.py  demo_gru.py  demo_lora.py  demo_tui.py  eval.py  inference.py  model.py  model_lora.py  programs.py  riscv.py  state_encoder.py  train.py  train_gru.py  train_lora.py
reflex/decoders/: __init__.py  base.py  beam.py  exec_verify.py  pure.py  rd_consistency.py  tiebreak.py
scripts/: compare_decoders.py  download_bird.sh  generate_programs.py  jepa_lookahead_infer.py  jepa_norm_probe.py  jepa_probe_topk.py  jepa_testbed.py  jepa_testbed_server.py  jepa_tiebreak_infer.py  retrain_target_head.py
vm/: Dockerfile  arg_vocab.json  demo.py  kernel.py  model.py  raw_loop.py  security.py  syscall_exec.c  test_copy.py  test_generate.py  train.py
vm/server/: Dockerfile  app.py  apply_config.py  controller.py  default.conf  metrics.py  nginx.conf
