[project]
name = "reflex"
version = "0.0.1"
description = "Natural language → RV32I machine code, grounded in live machine state"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.30",
    "numpy>=1.26",
    "peft>=0.12",
    "torch>=2.3",
    "transformers>=4.45",
    "unicorn>=2.1",
]

[project.scripts]
train = "reflex.train:main"
demo = "reflex.demo:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["reflex*"]
