[project]
name = "reflex"
version = "0.0.2"
description = "Flamingo-SQL: grounded text-to-SQL via gated cross-attention. Frozen Qwen2.5-Coder backbone; DB state enters through cross-attn, not the prompt."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10,<3.13"
dependencies = [
    "accelerate>=0.30",
    "numpy>=1.26",
    "rich>=13.7",
    "torch==2.4.1",
    "transformers>=4.45,<5",
    "sentencepiece>=0.2",
]

[project.scripts]
train = "reflex.train:main"
eval = "reflex.eval:main"
infer = "reflex.inference:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["reflex*"]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
